--- a/terraform/backends/dev.conf
+++ b/terraform/backends/dev.conf
@@ -1,4 +1,4 @@
-resource_group_name="penn-mktg-website"
-storage_account_name="pennmktgeastus2stg"
+resource_group_name="laff-website"
+storage_account_name="laffeastus2stg"
 container_name="terraform"
 key="dev"
